--- a/package.json
+++ b/package.json
@@ -8,22 +8,15 @@
     "url": "https://github.com/hendrixfan"
   },
   "scripts": {
-    "serve": "vue-cli-service serve ./example/main.js --open",
-    "build": "vue-cli-service build --name vue-accessibility-toolbar --entry ./src/index.js --target lib",
+    "serve": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "lint": "vue-cli-service lint",
     "doc:build": "npx vuedoc.md --section API --output ./README.md ./src/components/AccessibilityToolbar.vue",
     "prepublishOnly": "npm run lint && npm run build && npm run styleguide:build && npm run doc:build",
     "styleguide": "vue-styleguidist server",
     "styleguide:build": "vue-styleguidist build"
   },
-  "main": "dist/vue-accessibility-toolbar.umd.js",
-  "module": "dist/vue-accessibility-toolbar.common.min.js",
-  "files": [
-    "dist/*.css",
-    "dist/*.map",
-    "dist/*.js",
-    "src/*"
-  ],
+  "main": "src/index.js",
   "dependencies": {
     "core-js": "^2.6.5",
     "vue": "^2.6.10"
@@ -33,13 +26,24 @@
     "@vue/cli-plugin-eslint": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
     "@vuedoc/md": "^1.5.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.6",
     "component-fixture": "^0.4.1",
+    "cross-env": "^5.2.0",
+    "css-loader": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "sass-loader": "^7.1.0",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "url-loader": "^2.1.0",
     "vue-cli-plugin-component": "^1.10.5",
+    "vue-loader": "^15.7.1",
     "vue-styleguidist": "^1.7.13",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.36.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
   },
   "eslintConfig": {
     "root": true,
